<?xml version="1.0"?>
<package format="2">
  <name>gpd_grasp_msgs</name>
  <version>0.0.0</version>
  <description>The gpd_grasp_msgs package</description>
  <maintainer email="liang@informatik.uni-hamburg.de">Hongzhuo Liang</maintainer>
  <license>MIT</license>
  <author email="todo@todo.com">Andreas ten Pas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
